--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,4 +4,56 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  text-align: left;
 }
+
+
+:root {
+  --brand-color: #0095Ad;
+  --brand-rgb: 252, 180, 15;
+  --brand-hover: #0095Ad;
+  --brand-dark: #FCB415;
+  --brand-disabled: #ccf7db;
+  --brand-box-shadow: rgba(252, 180, 15, 0.5);
+  --brand-box-shadow-hover: rgba(252, 180, 15, 0.4);
+  --primary-color: #0095Ad;
+  --primary-rgb: 252, 180, 15;
+  --primary-hover: #20a6bb;
+  --primary-dark: #FCB415;
+  --primary-disabled: #9bc9d0;
+  --primary-box-shadow: rgba(252, 180, 15, 0.5);
+  --primary-box-shadow-hover: rgba(252, 180, 15, 0.4);
+  --secondary-color: #097bbf;
+  --secondary-rgb: 9, 123, 191;
+  --secondary-hover: #0b9af0;
+  --secondary-dark: #075c8e;
+  --secondary-disabled: #caeafd;
+  --secondary-box-shadow: rgba(9, 123, 191, 0.5);
+  --secondary-box-shadow-hover: rgba(9, 123, 191, 0.4);
+  --error-color: #a93c32;
+  --error-rgb: 180, 60, 50;
+  --error-hover: #c85146;
+  --error-dark: #822e26;
+  --error-disabled: #f7e5e3;
+  --error-box-shadow: rgba(180, 60, 50, 0.5);
+  --error-box-shadow-hover: rgba(180, 60, 50, 0.4);
+  --success-color: #22a97a;
+  --success-rgb: 34, 180, 122;
+  --success-hover: #2bd399;
+  --success-dark: #197f5b;
+  --success-disabled: #d4f6ea;
+  --success-box-shadow: rgba(34, 180, 122, 0.5);
+  --success-box-shadow-hover: rgba(34, 180, 122, 0.4);
+  --disabled-color: #6EA989;
+  --app-background: linear-gradient(to bottom, #fff 0%, #f3f7f7 100%);
+  --font-family-sans-serif: 'Open Sans', sans-serif;
+  --heading-color: #3a424e;
+  --link-color: #5fa6ff;
+  --link-color-hover: #447dbd;
+  --disabled-text-color: #b7c9cc;
+  --toolbar-background-color: #39424e;
+  --toolbar-box-shadow-color: rgba(115, 143, 147, 0.3);
+  --toolbar-border-color: #28313d;
+  --card-shadow-color: rgba(99, 118, 129, 0.3);
+  --card-hover-shadow-color: rgba(99, 118, 129, 0.5);
+  --card-margin-gutter: 0px; }
