--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -45,7 +45,7 @@ body {
   --success-box-shadow: rgba(34, 180, 122, 0.5);
   --success-box-shadow-hover: rgba(34, 180, 122, 0.4);
   --disabled-color: #6EA989;
-  --app-background: #fff
+  --app-background: #fff;
   --font-family-sans-serif: 'Open Sans', sans-serif;
   --heading-color: #3a424e;
   --link-color: #5fa6ff;
