--- a/frontend/src/components/TermsAndConditions.css
+++ b/frontend/src/components/TermsAndConditions.css
@@ -1,9 +1,13 @@
 .terms-container {
-    max-height: 300px; /* Adjust the height based on your needs */
+    max-height: 200px; /* Adjust the height based on your needs */
     overflow-y: scroll;
     overflow-anchor: none;
     border: 1px solid #ccc;
     padding: 10px;
     text-align: left;
-    
   }
+
+body.terms-container {
+  background-color: #ccc;
+  background-image: none;
+}
