Modificações: 1. Adicionado um botão para iniciar e parar as gravações 2. Adicionado um timer de 5 segundos antes de iniciar a gravação

--- a/frontend/src/components/webcam.css
+++ b/frontend/src/components/webcam.css
@@ -11,3 +11,16 @@
   border-bottom: 25px solid white;
   cursor: pointer;
 }
+
+.circle {
+  position: absolute;
+  top: 90%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 75px;
+  height: 75px;
+  border-radius: 50%;
+  background: white;
+  cursor: pointer;
+  box-shadow: 4px, 6px, 10px, 0 rgba(0, 0, 0, 0.4);
+}
