--- a/frontend/src/components/Alertdialog.css
+++ b/frontend/src/components/Alertdialog.css
@@ -1,9 +1,10 @@
 .dialog-box {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
     border: 1px solid #ccc;
     z-index: 1000;
